<resources>
    <string name="app_name">Curso 3 - Semana 2</string>
    <string name="iv_nombre_completo_descr">Nombre completo del contacto</string>
    <string name="iv_fecha_nacimiento_descr">Fecha de nacimiento del contacto</string>
    <string name="iv_telefono_descr">Teléfono del contacto</string>
    <string name="iv_email_descr">Correo electrónico del contacto</string>
    <string name="iv_descripcion_descr">Descripción del contacto</string>

    <string name="nombre_completo">Nombre completo</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="descripcion">Descripción</string>
    <string name="boton_siguiente_text">Siguiente</string>
    <string name="boton_editar_text">Editar datos</string>
    <string name="titulo_resumen">Confirmar datos</string>
</resources>
